@@ -1,3 +1,4 @@
+(r4949) Enable scrolling of the email list with the mouse wheel.
 (r4974) Minor improvement of the Dutch translation.
 (r4959) Fix vanilla inconsistencies between the displayed file list and the clickable regions in the file viewer.
 (r4956) Fix a vanilla display glitch in the file viewer (at least in the German version): MOM's portrait was displayed at a different height compared to all other portraits.
